feat: implement Daily AI Quota limit, Premium Upgrade Flow, Flashcard SRS system, and AI Kaiwa Speaking Coach